--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,8 +80,45 @@
                 android:text="Submit"
                 android:backgroundTint="@color/colorPrimary"
                 android:textSize="18sp" />
-        </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="end">
+                <Button
+                    android:id="@+id/bSeeUser"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:padding="1dp"
+                    android:text="See User"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:textSize="10sp" />
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Already have an Account?"
+                    android:textSize="10sp"
+                    />
+
+                <Button
+                    android:id="@+id/bLogin"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:padding="1dp"
+                    android:text="Login"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:textSize="10sp" />
+
+
+
+            </LinearLayout>
+        </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
